--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/colorGreyLight">
+        android:layout_height="100dp">
+
         <TextView
             android:id="@+id/description"
             android:layout_width="245dp"
             android:layout_height="48dp"
             android:ems="10"
-            android:text="Type movie title this hi a fhello message"
+            android:text="Cercador de pel·lícules TMDB."
             android:layout_marginTop="34dp"
             android:layout_marginLeft="70dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,24 +30,25 @@
         android:layout_height="100dp">
         <EditText
             android:id="@+id/movieTitle"
-            android:layout_width="245dp"
+            android:layout_width="300dp"
             android:layout_height="48dp"
             android:ems="10"
-            android:hint="Type movie title"
+            android:hint="Introdueix el títol"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:layout_marginLeft="50dp"
             app:layout_constraintLeft_toLeftOf="parent"  />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="70dp">
         <Button
             android:id="@+id/cerca"
-            android:layout_width="300dp"
-            android:layout_height="150dp"
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
             android:text="Cerca"
+            android:layout_marginLeft="50dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
     </LinearLayout>
