--- a/app/src/main/res/layout/list_item_movie_pol.xml
+++ b/app/src/main/res/layout/list_item_movie_pol.xml
@@ -9,6 +9,8 @@
     android:orientation="horizontal"
     android:padding="16dp">
 
+
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -34,18 +36,36 @@
             android:id="@+id/titlePol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="16dp"
+            android:paddingRight="10dp"
             android:textStyle="bold"
             android:textColor="@color/colorBlack"
-            android:textSize="16sp" />
+            android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/popularityPol"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingRight="16dp"
-            android:textColor="@color/colorBlack"
-            android:textSize="14sp" />
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/votes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="10dp"
+                android:text="Votes:"
+                android:textColor="@color/colorBlack"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/votesPol"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="5dp"
+                android:textColor="@color/colorBlack"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
@@ -69,6 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
+            android:textSize="14sp"
             android:text="5.0" />
     </LinearLayout>
 
